force-app/main/default/objects/Device_Order__c/Device_Order__c.object-meta.xml
<CustomObject>
  <label>Device Order</label>
  <pluralLabel>Device Orders</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Order Number</label>
    <displayFormat>ORD-{0000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
  <description>Orders for Devices</description>
</CustomObject>