force-app/main/default/objects/Device_Order__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <label>Confirmation Number</label>
    <description>Unique confirmation number automatically generated for each order. Used for order tracking and customer communication.</description>
    <inlineHelpText>Automatically generated unique identifier for this order. Share this number with customers for order tracking and support inquiries.</inlineHelpText>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>