force-app/main/default/objects/Device_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Device Orders</relationshipLabel>
    <relationshipName>Device_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>