force-app/main/default/objects/Device_Order__c/fields/Device__c.field-meta.xml
<CustomField>
  <fullName>Device__c</fullName>
  <label>Device</label>
  <type>Lookup</type>
  <referenceTo>Device__c</referenceTo>
  <relationshipName>Orders</relationshipName>
  <relationshipLabel>Orders</relationshipLabel>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>