force-app/main/default/objects/Device_Order__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <formula>Total_Price__c * (1 - BLANKVALUE(Discount_Percentage__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>