force-app/main/default/objects/Device_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <label>Order Date</label>
    <description>The date when this order was placed. Automatically populated when the order is created for tracking and reporting purposes.</description>
    <inlineHelpText>Automatically set to today's date when the order is created. Used for order tracking, reporting, and business analytics.</inlineHelpText>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
</CustomField>