force-app/main/default/objects/Device_Order__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Order_Priority</valueSetName>
    </valueSet>
</CustomField>