force-app/main/default/objects/Device_Order__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
      <value><fullName>Confirmed</fullName><default>true</default><label>Confirmed</label></value>
      <value><fullName>Fulfilled</fullName><default>false</default><label>Fulfilled</label></value>
      <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>