force-app/main/default/objects/Device_Order__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <description>Automatically calculated total price for this order (Device Price × Quantity). Updated by system triggers when order details change.</description>
    <inlineHelpText>Automatically calculated based on device price and order quantity. This field is updated by system automation and should not be manually edited.</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>