force-app/main/default/objects/Device_Order__c/recordTypes/Bulk_Order.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Order</fullName>
    <active>true</active>
    <description>Record type for large quantity orders with special processing requirements</description>
    <label>Bulk Order</label>
</RecordType>