force-app/main/default/objects/Device_Order__c/recordTypes/Rush_Order.recordType-meta.xml
<RecordType>
    <fullName>Rush_Order</fullName>
    <active>true</active>
    <description>Record type for urgent orders requiring expedited processing</description>
    <label>Rush Order</label>
    <layoutAssignments>
        <layout>Device_Order__c-Device Order Layout</layout>
    </layoutAssignments>
</RecordType>