force-app/main/default/objects/Device_Order__c/recordTypes/Standard_Order.recordType-meta.xml
<RecordType>
    <fullName>Standard_Order</fullName>
    <active>true</active>
    <description>Record type for standard orders with normal processing time</description>
    <label>Standard Order</label>
    <layoutAssignments>
        <layout>Device_Order__c-Device Order Layout</layout>
    </layoutAssignments>
</RecordType>