force-app/main/default/objects/Device_Order__c/validationRules/Business_Hours_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Hours_Only</fullName>
    <active>true</active>
    <description>Simplified business hours check - demonstrates time-based validation. For educational purposes, this rule can be activated/deactivated to show time-based business logic concepts.</description>
    <errorConditionFormula>OR(HOUR(NOW()) &lt; 9, HOUR(NOW()) &gt; 17)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Orders can only be placed during business hours (9 AM - 5 PM). Please try again during business hours or contact customer service for urgent orders.</errorMessage>
</ValidationRule>