force-app/main/default/objects/Device_Order__c/validationRules/Device_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Device_Required</fullName>
    <active>true</active>
    <description>Ensures that every Device Order must have a Device selected. This is a fundamental business rule that prevents incomplete orders from being created.</description>
    <errorConditionFormula>ISBLANK(Device__c)</errorConditionFormula>
    <errorDisplayField>Device__c</errorDisplayField>
    <errorMessage>Please select a device for this order. A device selection is required to process the order.</errorMessage>
</ValidationRule>