force-app/main/default/objects/Device_Order__c/validationRules/Positive_Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Quantity_Required</fullName>
    <active>true</active>
    <description>Ensures that order quantity is always a positive number greater than zero. Prevents invalid orders with zero or negative quantities.</description>
    <errorConditionFormula>OR(
        ISBLANK(Quantity__c),
        Quantity__c &lt;= 0
    )</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Order quantity must be greater than zero. Please enter a valid positive number for the quantity.</errorMessage>
</ValidationRule>