force-app/main/default/objects/Device_Order__c/validationRules/Positive_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Quantity_Validation</fullName>
    <active>true</active>
    <description>Ensures that Order Quantity is always positive and greater than zero</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Order Quantity must be greater than zero. Please enter a valid positive quantity.</errorMessage>
</ValidationRule>