force-app/main/default/objects/Device_Order__c/validationRules/Valid_Delivery_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Delivery_Date</fullName>
    <active>true</active>
    <description>Ensures that Expected Delivery Date is not in the past and is after Order Date</description>
    <errorConditionFormula>Expected_Delivery_Date__c &lt; Order_Date__c || 
Expected_Delivery_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Expected_Delivery_Date__c</errorDisplayField>
    <errorMessage>Expected Delivery Date must be today or in the future, and must be after the Order Date. Please select a valid delivery date.</errorMessage>
</ValidationRule>