force-app/main/default/objects/Device_Order__c/listViews/All_Orders_Enhanced.listView-meta.xml
<ListView>
    <fullName>All_Orders_Enhanced</fullName>
    <columns>NAME</columns>
    <columns>Device__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders - Enhanced</label>
    <language>en_US</language>
</ListView>