force-app/main/default/objects/Device_Order__c/listViews/Confirmed_Orders.listView-meta.xml
<ListView>
    <fullName>Confirmed_Orders</fullName>
    <columns>NAME</columns>
    <columns>Device__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>Confirmed Orders</label>
    <language>en_US</language>
</ListView>