force-app/main/default/objects/Device_Order__c/listViews/Recent_Orders_Dashboard.listView-meta.xml
<ListView>
    <fullName>Recent_Orders_Dashboard</fullName>
    <columns>NAME</columns>
    <columns>Device__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Orders - Dashboard View</label>
    <language>en_US</language>
</ListView>